--- a/gridot/GriDot/Base.lproj/Main.storyboard
+++ b/gridot/GriDot/Base.lproj/Main.storyboard
@@ -1101,45 +1101,114 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zlz-d1-OPl">
-                                <rect key="frame" x="19.666666666666657" y="136" width="351" height="50"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="아이디를 영문으로 입력해주세요" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zlz-d1-OPl">
+                                <rect key="frame" x="120" y="230.66666666666666" width="250" height="39.999999999999972"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="YMf-Qt-qDf"/>
+                                    <constraint firstAttribute="height" constant="40" id="YMf-Qt-qDf"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름을 입력하세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QgO-lf-MP2">
-                                <rect key="frame" x="19.666666666666657" y="70" width="351" height="36"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아이디" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QgO-lf-MP2">
+                                <rect key="frame" x="20" y="238.66666666666666" width="60" height="23.999999999999972"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="PCE-TL-86J"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B4B-ID-e9w">
-                                <rect key="frame" x="321.66666666666669" y="20" width="49" height="31"/>
+                                <rect key="frame" x="321" y="20" width="49" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="적용"/>
                                 <connections>
                                     <action selector="tappedApply:" destination="Npd-X1-7aw" eventType="touchUpInside" id="ZqR-LP-umh"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이메일을 입력해주세요" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C5W-2P-cnh">
+                                <rect key="frame" x="121" y="303.66666666666669" width="249" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="VcE-bm-Ccy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9uv-0q-bsX">
+                                <rect key="frame" x="21" y="311.66666666666669" width="60" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="4EU-Va-5Vi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="텍스트 입력 오류" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Obg-FW-xbA">
+                                <rect key="frame" x="120" y="275.66666666666669" width="250" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" systemColor="systemPinkColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="텍스트 입력 오류" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Kb-yz-VVK">
+                                <rect key="frame" x="121" y="348.66666666666669" width="249" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" systemColor="systemPinkColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W0K-7c-kVZ">
+                                <rect key="frame" x="146.33333333333334" y="61.000000000000007" width="97.333333333333343" height="97.666666666666686"/>
+                                <color key="backgroundColor" name="Color1"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="W0K-7c-kVZ" secondAttribute="height" multiplier="1:1" id="pcL-4n-3bn"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Y0-ug-5V7">
+                                <rect key="frame" x="127" y="168.66666666666666" width="136" height="32"/>
+                                <color key="tintColor" systemColor="systemGray2Color"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="프로필 사진 바꾸기">
+                                    <fontDescription key="titleFontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="15"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="tappedChangeProfileImage:" destination="Npd-X1-7aw" eventType="touchUpInside" id="CjV-Zm-SjV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4Fb-Z7-U95"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Zlz-d1-OPl" firstAttribute="top" secondItem="QgO-lf-MP2" secondAttribute="bottom" constant="30" id="0d6-6h-BIh"/>
-                            <constraint firstItem="Zlz-d1-OPl" firstAttribute="centerX" secondItem="4Fb-Z7-U95" secondAttribute="centerX" id="4OM-GX-3fm"/>
+                            <constraint firstItem="W0K-7c-kVZ" firstAttribute="width" secondItem="8o2-xk-4Ye" secondAttribute="width" multiplier="0.25" id="3r8-eK-AFO"/>
+                            <constraint firstItem="0Kb-yz-VVK" firstAttribute="top" secondItem="C5W-2P-cnh" secondAttribute="bottom" constant="5" id="3zY-fl-FRX"/>
+                            <constraint firstItem="QgO-lf-MP2" firstAttribute="leading" secondItem="4Fb-Z7-U95" secondAttribute="leading" constant="20" id="5W4-d5-25G"/>
+                            <constraint firstItem="Obg-FW-xbA" firstAttribute="top" secondItem="Zlz-d1-OPl" secondAttribute="bottom" constant="5" id="8Sh-n4-hlG"/>
                             <constraint firstItem="B4B-ID-e9w" firstAttribute="top" secondItem="4Fb-Z7-U95" secondAttribute="top" constant="20" id="987-hT-NoH"/>
-                            <constraint firstItem="B4B-ID-e9w" firstAttribute="trailing" secondItem="Zlz-d1-OPl" secondAttribute="trailing" id="JSR-En-JS9"/>
-                            <constraint firstItem="QgO-lf-MP2" firstAttribute="width" secondItem="Zlz-d1-OPl" secondAttribute="width" id="JWK-ew-64N"/>
-                            <constraint firstItem="Zlz-d1-OPl" firstAttribute="width" secondItem="8o2-xk-4Ye" secondAttribute="width" multiplier="0.9" id="Kip-lR-67p"/>
-                            <constraint firstItem="QgO-lf-MP2" firstAttribute="centerX" secondItem="Zlz-d1-OPl" secondAttribute="centerX" id="iba-uR-wfd"/>
-                            <constraint firstItem="QgO-lf-MP2" firstAttribute="top" secondItem="4Fb-Z7-U95" secondAttribute="top" constant="70" id="xej-7I-3M6"/>
+                            <constraint firstItem="W0K-7c-kVZ" firstAttribute="top" secondItem="B4B-ID-e9w" secondAttribute="bottom" constant="10" id="9Wl-nH-mAf"/>
+                            <constraint firstItem="Obg-FW-xbA" firstAttribute="trailing" secondItem="Zlz-d1-OPl" secondAttribute="trailing" id="EM3-dS-mz6"/>
+                            <constraint firstItem="4Fb-Z7-U95" firstAttribute="trailing" secondItem="C5W-2P-cnh" secondAttribute="trailing" constant="20" id="JvD-aq-RPn"/>
+                            <constraint firstItem="Zlz-d1-OPl" firstAttribute="top" secondItem="8Y0-ug-5V7" secondAttribute="bottom" constant="30" id="LJp-UI-cxs"/>
+                            <constraint firstItem="8Y0-ug-5V7" firstAttribute="centerX" secondItem="W0K-7c-kVZ" secondAttribute="centerX" id="M46-Ev-fEr"/>
+                            <constraint firstItem="QgO-lf-MP2" firstAttribute="centerY" secondItem="Zlz-d1-OPl" secondAttribute="centerY" id="PeQ-uV-pcc"/>
+                            <constraint firstItem="C5W-2P-cnh" firstAttribute="leading" secondItem="9uv-0q-bsX" secondAttribute="trailing" constant="40" id="Vu7-oi-hvM"/>
+                            <constraint firstItem="W0K-7c-kVZ" firstAttribute="centerX" secondItem="4Fb-Z7-U95" secondAttribute="centerX" id="Zjm-Kx-IoH"/>
+                            <constraint firstItem="Obg-FW-xbA" firstAttribute="leading" secondItem="Zlz-d1-OPl" secondAttribute="leading" id="Zo5-NY-oKn"/>
+                            <constraint firstItem="0Kb-yz-VVK" firstAttribute="leading" secondItem="C5W-2P-cnh" secondAttribute="leading" id="b3K-jN-D5f"/>
+                            <constraint firstItem="0Kb-yz-VVK" firstAttribute="trailing" secondItem="C5W-2P-cnh" secondAttribute="trailing" id="hMi-H1-5Tj"/>
+                            <constraint firstItem="4Fb-Z7-U95" firstAttribute="trailing" secondItem="Zlz-d1-OPl" secondAttribute="trailing" constant="20" id="jo3-GO-hIG"/>
+                            <constraint firstItem="8Y0-ug-5V7" firstAttribute="top" secondItem="W0K-7c-kVZ" secondAttribute="bottom" constant="10" id="oLs-Cq-Ezd"/>
+                            <constraint firstItem="9uv-0q-bsX" firstAttribute="centerY" secondItem="C5W-2P-cnh" secondAttribute="centerY" id="oTY-qr-Ors"/>
+                            <constraint firstItem="9uv-0q-bsX" firstAttribute="leading" secondItem="4Fb-Z7-U95" secondAttribute="leading" constant="21" id="tfm-mD-SRs"/>
+                            <constraint firstItem="4Fb-Z7-U95" firstAttribute="trailing" secondItem="B4B-ID-e9w" secondAttribute="trailing" constant="20" id="ti8-TH-GNs"/>
+                            <constraint firstItem="9uv-0q-bsX" firstAttribute="top" secondItem="QgO-lf-MP2" secondAttribute="bottom" constant="49" id="vO6-mK-04T"/>
+                            <constraint firstItem="Zlz-d1-OPl" firstAttribute="leading" secondItem="QgO-lf-MP2" secondAttribute="trailing" constant="40" id="yob-ye-8NF"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="OEp-co-ZGt"/>
                     <connections>
-                        <outlet property="textField" destination="Zlz-d1-OPl" id="3en-Ym-0Gb"/>
+                        <outlet property="emailErrorLabel" destination="0Kb-yz-VVK" id="HP5-g2-rfn"/>
+                        <outlet property="emailTextField" destination="C5W-2P-cnh" id="gIL-iA-Uoi"/>
+                        <outlet property="imageView" destination="W0K-7c-kVZ" id="3Zf-D7-4tp"/>
+                        <outlet property="nameErrorLabel" destination="Obg-FW-xbA" id="aCf-Rf-Zv5"/>
+                        <outlet property="nameTextField" destination="Zlz-d1-OPl" id="VH4-tY-nKk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="efN-2W-2vB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -2197,8 +2266,14 @@
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
