--- a/gridot/GriDot/Base.lproj/Main.storyboard
+++ b/gridot/GriDot/Base.lproj/Main.storyboard
@@ -1050,7 +1050,7 @@
                                     <color key="baseBackgroundColor" name="Color_selectedCell"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <segue destination="Npd-X1-7aw" kind="showDetail" id="AAK-cc-155"/>
+                                    <segue destination="Npd-X1-7aw" kind="show" id="RCe-sM-XIQ"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1128,19 +1128,20 @@
             <objects>
                 <viewController storyboardIdentifier="EditProfileViewController" id="Npd-X1-7aw" customClass="EditProfileViewController" customModule="GriDot" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8o2-xk-4Ye">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="761"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W0K-7c-kVZ">
-                                <rect key="frame" x="117" y="30" width="156" height="156"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="W0K-7c-kVZ">
+                                <rect key="frame" x="117" y="119.99999999999999" width="156" height="152.66666666666669"/>
                                 <color key="backgroundColor" name="Color1"/>
+                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="W0K-7c-kVZ" secondAttribute="height" multiplier="1:1" id="pcL-4n-3bn"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Y0-ug-5V7">
-                                <rect key="frame" x="117" y="191" width="156" height="32"/>
-                                <color key="tintColor" systemColor="systemGray2Color"/>
+                                <rect key="frame" x="117" y="279" width="156" height="32"/>
+                                <color key="tintColor" name="AccentColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="프로필 사진 바꾸기">
                                     <fontDescription key="titleFontDescription" name="AppleSDGothicNeo-Medium" family="Apple SD Gothic Neo" pointSize="15"/>
@@ -1150,7 +1151,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jut-7Y-5YX">
-                                <rect key="frame" x="30" y="253" width="330" height="60"/>
+                                <rect key="frame" x="30" y="341" width="330" height="60"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="아이디를 입력해주세요" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zlz-d1-OPl">
                                         <rect key="frame" x="80" y="0.0" width="250" height="40"/>
@@ -1189,7 +1190,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B4B-ID-e9w">
-                                <rect key="frame" x="19.666666666666657" y="333" width="351" height="50"/>
+                                <rect key="frame" x="19.666666666666657" y="421" width="351" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="9hJ-8k-lBi"/>
                                 </constraints>
@@ -1202,32 +1203,14 @@
                                     <action selector="tappedApply:" destination="Npd-X1-7aw" eventType="touchUpInside" id="ZqR-LP-umh"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mX4-ZR-lkE">
-                                <rect key="frame" x="340" y="15" width="35" height="35"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="mX4-ZR-lkE" secondAttribute="height" multiplier="1:1" id="NWY-fK-fbj"/>
-                                    <constraint firstAttribute="width" constant="35" id="djo-eF-voh"/>
-                                </constraints>
-                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal">
-                                    <imageReference key="image" image="xmark.circle.fill" catalog="system" symbolScale="default"/>
-                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="25" scale="large"/>
-                                </state>
-                                <connections>
-                                    <action selector="tappedCancel:" destination="Npd-X1-7aw" eventType="touchUpInside" id="rh6-vc-4SV"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4Fb-Z7-U95"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="mX4-ZR-lkE" firstAttribute="top" secondItem="4Fb-Z7-U95" secondAttribute="top" constant="15" id="2oN-UM-Hib"/>
                             <constraint firstItem="B4B-ID-e9w" firstAttribute="centerX" secondItem="4Fb-Z7-U95" secondAttribute="centerX" id="6ri-ia-NOl"/>
                             <constraint firstItem="4Fb-Z7-U95" firstAttribute="trailing" secondItem="jut-7Y-5YX" secondAttribute="trailing" constant="30" id="7Ip-7d-i1v"/>
                             <constraint firstItem="jut-7Y-5YX" firstAttribute="leading" secondItem="4Fb-Z7-U95" secondAttribute="leading" constant="30" id="Aky-KE-GZb"/>
                             <constraint firstItem="8Y0-ug-5V7" firstAttribute="centerX" secondItem="W0K-7c-kVZ" secondAttribute="centerX" id="M46-Ev-fEr"/>
-                            <constraint firstItem="4Fb-Z7-U95" firstAttribute="trailing" secondItem="mX4-ZR-lkE" secondAttribute="trailing" constant="15" id="MMC-wI-jJs"/>
                             <constraint firstItem="B4B-ID-e9w" firstAttribute="top" secondItem="jut-7Y-5YX" secondAttribute="bottom" constant="20" id="Mct-XL-XVd"/>
                             <constraint firstItem="8Y0-ug-5V7" firstAttribute="width" secondItem="W0K-7c-kVZ" secondAttribute="width" id="NLW-1e-zdb"/>
                             <constraint firstItem="W0K-7c-kVZ" firstAttribute="top" secondItem="4Fb-Z7-U95" secondAttribute="top" constant="30" id="V0b-2O-8KK"/>
@@ -1246,6 +1229,7 @@
                         <outlet property="nameTextField" destination="Zlz-d1-OPl" id="VH4-tY-nKk"/>
                         <outlet property="nameView" destination="jut-7Y-5YX" id="6Ai-1S-afq"/>
                         <outlet property="nameViewHeightConstraint" destination="j0I-pr-b0K" id="XuH-ew-JC1"/>
+                        <outlet property="naviItem" destination="OEp-co-ZGt" id="wEK-Gd-Wox"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="efN-2W-2vB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -2283,6 +2267,9 @@
         <image name="square.and.arrow.up.on.square" catalog="system" width="117" height="128"/>
         <image name="trash" catalog="system" width="121" height="128"/>
         <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Color1">
             <color red="0.9570000171661377" green="0.9570000171661377" blue="0.98400002717971802" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -2309,9 +2296,6 @@
         </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGray2Color">
-            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
